Fix overflow x

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    overflow-y: hidden;
+    overflow-x: hidden;
     margin: 0px;
     background-repeat: no-repeat;
     background-size: cover;
